--- a/wazimap_ke/templates/profile/profile_detail.html
+++ b/wazimap_ke/templates/profile/profile_detail.html
@@ -31,12 +31,10 @@
                 <h1 class="title">{{ geography.this.short_name }}</h1>
                 <p class="caption">
                   {{ geography.this.geo_level|capfirst }}
-                  {% if geography.this.geo_level != 'country' %}
+                  {% if geography.parents %}
                       in
-                      {% for level in geography.parents_ordering %}
-                        {% with g=geography.parents|get:level %}
-                          <a href="/profiles/{{ g.full_geoid }}-{{ g.short_name|slugify }}/">{{ g.short_name }}</a>{% if not forloop.last %},{%endif%}
-                        {% endwith %}
+                      {% for level, g in geography.parents.items %}
+                        <a href="/profiles/{{ g.full_geoid }}-{{ g.short_name|slugify }}/">{{ g.short_name }}</a>{% if not forloop.last %},{%endif%}
                       {% endfor %}
                   {% endif %}
                 </p>
