Update Wazimap on Github link

--- a/wazimap_ke/templates/_base.html
+++ b/wazimap_ke/templates/_base.html
@@ -5,7 +5,7 @@
 <div class="column-third">
     <ul class="ul-icon-list">
         <li>
-            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/censusreporter-ke" target="_blank">Wazimap on Github</a>
+            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">Wazimap on Github</a>
         </li>
         <li>
             <i class="fa fa-twitter"></i> <a href="http://twitter.com/CodeForAfrica" target="_blank">@CodeForAfrica</a>
