Update Code For Africa Twitter link

--- a/wazimap_ke/templates/_base.html
+++ b/wazimap_ke/templates/_base.html
@@ -8,7 +8,7 @@
             <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">Wazimap on Github</a>
         </li>
         <li>
-            <i class="fa fa-twitter"></i> <a href="http://twitter.com/CodeForAfrica" target="_blank">@CodeForAfrica</a>
+            <i class="fa fa-twitter"></i> <a href="http://twitter.com/Code4Africa" target="_blank">@Code4Africa</a>
         </li>
         <li>
             <i class="fa fa-envelope"></i> <a href="mailto:info@codeforafrica.org">Email us</a>
