--- a/wazimap_ke/templates/_base.html
+++ b/wazimap_ke/templates/_base.html
@@ -5,13 +5,13 @@
 <div class="column-third">
     <ul class="ul-icon-list">
         <li>
-            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">Wazimap on Github</a>
+            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">WAZImap Kenya on Github</a>
         </li>
         <li>
-            <i class="fa fa-twitter"></i> <a href="http://twitter.com/Code4Africa" target="_blank">@Code4Africa</a>
+            <i class="fa fa-twitter"></i> <a href="https://twitter.com/Code4Africa" target="_blank">@Code4Africa</a>
         </li>
         <li>
-            <i class="fa fa-envelope"></i> <a href="mailto:info@codeforafrica.org">Email us</a>
+            <i class="fa fa-envelope"></i> <a href="mailto:hello@codeforafrica.org">Email us</a>
         </li>
     </ul>
 </div>
@@ -21,14 +21,14 @@
             <i class="fa fa-bar-chart-o"></i> <a href="http://www.knbs.or.ke/" target="_blank">Census 2009 data from KNBS</a>
         </li>
         <li>
-            <i class="fa fa-github"></i> Built on <a href="http://censusreporter.org" target="_blank">CensusReporter.org</a>
+            <i class="fa fa-github"></i> Built on <a href="https://github.com/Code4SA/wazimap" target="_blank">WAZImap</a>
         </li>
     </ul>
 </div>
 <div class="column-third">
     <ul class="ul-icon-list">
         <li>
-            <a href="http://www.codeforafrica.org/"><img src="{% static 'img/code4africa-logo-small.png' %}"></a>
+            <a href="https://codeforafrica.org/"><img src="{% static 'img/code4africa-logo-small.png' %}"></a>
         </li>
     </ul>
 </div>
