--- a/wazimap_ke/templates/_base.html
+++ b/wazimap_ke/templates/_base.html
@@ -1,34 +1,51 @@
 {% extends '_base.html' %}
 {% load staticfiles %}
 
+{% block header_branding %}
+    <a href="https://codeforafrica.org/" target="_blank">
+        <img class="mma-logo" src="{% static 'img/cfkenya-logo.png' %}">
+    </a>
+{% endblock header_branding %}
+
 {% block footer_content %}
-<div class="column-third">
-    <ul class="ul-icon-list">
-        <li>
-            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">WAZImap Kenya on Github</a>
-        </li>
-        <li>
-            <i class="fa fa-twitter"></i> <a href="https://twitter.com/Code4Africa" target="_blank">@Code4Africa</a>
-        </li>
-        <li>
-            <i class="fa fa-envelope"></i> <a href="mailto:hello@codeforafrica.org">Email us</a>
-        </li>
-    </ul>
-</div>
-<div class="column-third">
+<div class="column-quarter">
     <ul class="ul-icon-list">
         <li>
             <i class="fa fa-bar-chart-o"></i> <a href="http://www.knbs.or.ke/" target="_blank">Census 2009 data from KNBS</a>
         </li>
         <li>
+            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">WAZImap Kenya on Github</a>
+        </li>
+        <li>
             <i class="fa fa-github"></i> Built on <a href="https://github.com/Code4SA/wazimap" target="_blank">WAZImap</a>
+        </li>
+        <li>
+            <i class="fa fa-twitter"></i> <a href="https://twitter.com/Code4Africa" target="_blank">@Code4Africa</a>
+        </li>
+        <li>
+            <i class="fa fa-envelope"></i> <a href="mailto:hello@codeforkenya.org">Email us</a>
         </li>
     </ul>
 </div>
-<div class="column-third">
+<div class="column-half">
     <ul class="ul-icon-list">
+        
+        <li></li>
+        
+    </ul>
+</div>
+<div class="column-quarter" style="text-align: center;">
+    <ul class="ul-icon-list">
+        <li>A project by:</li>
+        <li>
+            <a href="https://codeforafrica.org/"><img src="{% static 'img/cfkenya-logo.png' %}" style="height: 40px;"></a>
+            <span style="height: 10px; display: inline-block;"></span>
+        </li>
+        <li>Supported by:</li>
         <li>
             <a href="https://codeforafrica.org/"><img src="{% static 'img/code4africa-logo-small.png' %}"></a>
+            <span style="width: 10px; height: 1px; display: inline-block;"> </span>
+            <a href="http://icfj.org/"><img src="{% static 'img/icfj-logo.jpg' %}" style="height: 40px;"></a>
         </li>
     </ul>
 </div>
