--- a/wazimap_ke/templates/_base.html
+++ b/wazimap_ke/templates/_base.html
@@ -11,7 +11,7 @@
 <div class="column-quarter">
     <ul class="ul-icon-list">
         <li>
-            <i class="fa fa-bar-chart-o"></i> <a href="http://www.knbs.or.ke/" target="_blank">Census 2009 data from KNBS</a>
+            <i class="fa fa-bar-chart-o"></i> Census 2009 data from <a href="http://www.knbs.or.ke/" target="_blank">KNBS</a>
         </li>
         <li>
             <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">WAZImap Kenya on Github</a>
@@ -38,12 +38,12 @@
     <ul class="ul-icon-list">
         <li>A project by:</li>
         <li>
-            <a href="https://codeforafrica.org/"><img src="{% static 'img/cfkenya-logo.png' %}" style="height: 40px;"></a>
+            <a href="https://codeforafrica.org/"><img src="{% static 'img/cfkenya-logo.png' %}" style="height: 50px;"></a>
             <span style="height: 10px; display: inline-block;"></span>
         </li>
         <li>Supported by:</li>
         <li>
-            <a href="https://codeforafrica.org/"><img src="{% static 'img/code4africa-logo-small.png' %}"></a>
+            <a href="https://codeforafrica.org/"><img src="{% static 'img/cfafrica-logo-small.png' %}"></a>
             <span style="width: 10px; height: 1px; display: inline-block;"> </span>
             <a href="http://icfj.org/"><img src="{% static 'img/icfj-logo.jpg' %}" style="height: 40px;"></a>
         </li>
