Put back MMA logo

--- a/wazimap_ke/templates/homepage.html
+++ b/wazimap_ke/templates/homepage.html
@@ -105,6 +105,8 @@
                 <a href="https://codeforafrica.org/" target="_blank"><img src="{% static 'img/cfafrica-logo.png' %}" style="height: 70px;"></a>
                 <span style="width: 10px; height: 1px; display: inline-block;"> </span>
                 <a href="http://icfj.org/" target="_blank"><img src="{% static 'img/icfj-logo.png' %}" style="height: 70px;"></a>
+                <span style="width: 10px; height: 1px; display: inline-block;"> </span>
+                <a href="http://www.mediamonitoringafrica.org/" target="_blank"><img src="{% static 'img/mma.png' %}" style="height: 50px;"></a>
             </p>
 
         </header>
