--- a/wazimap_ke/templates/_base.html
+++ b/wazimap_ke/templates/_base.html
@@ -2,8 +2,8 @@
 {% load staticfiles %}
 
 {% block header_branding %}
-    <a href="https://codeforafrica.org/" target="_blank">
-        <img class="mma-logo" src="{% static 'img/cfkenya-logo.png' %}">
+    <a href="http://www.mediamonitoringafrica.org/" target="_blank">
+        <img class="mma-logo" src="{% static 'img/mma.png' %}">
     </a>
 {% endblock header_branding %}
 
