Space out Partner logos on mobile

--- a/wazimap_ke/templates/homepage.html
+++ b/wazimap_ke/templates/homepage.html
@@ -102,11 +102,11 @@
             <hr/>
             <h2 style="text-align: center; margin-bottom: 20px;">Supported by:</h2>
             <p style="text-align: center;">
-                <a href="https://codeforafrica.org/" target="_blank"><img src="{% static 'img/cfafrica-logo.png' %}" style="height: 70px;"></a>
+                <a href="https://codeforafrica.org/" target="_blank"><img src="{% static 'img/cfafrica-logo.png' %}" style="height: 70px; margin-bottom: 50px;"></a>
                 <span style="width: 10px; height: 1px; display: inline-block;"> </span>
-                <a href="http://icfj.org/" target="_blank"><img src="{% static 'img/icfj-logo.png' %}" style="height: 70px;"></a>
+                <a href="http://icfj.org/" target="_blank"><img src="{% static 'img/icfj-logo.png' %}" style="height: 70px; margin-bottom:50px;"></a>
                 <span style="width: 10px; height: 1px; display: inline-block;"> </span>
-                <a href="http://www.mediamonitoringafrica.org/" target="_blank"><img src="{% static 'img/mma.png' %}" style="height: 50px;"></a>
+                <a href="http://www.mediamonitoringafrica.org/" target="_blank"><img src="{% static 'img/mma.png' %}" style="height: 50px; margin-bottom: 50px;"></a>
             </p>
 
         </header>
