Use correct Wazimap Branding

--- a/wazimap_ke/templates/_base.html
+++ b/wazimap_ke/templates/_base.html
@@ -14,10 +14,10 @@
             <i class="fa fa-bar-chart-o"></i> Census 2009 data from <a href="http://www.knbs.or.ke/" target="_blank">KNBS</a>
         </li>
         <li>
-            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">WAZImap Kenya on Github</a>
+            <i class="fa fa-github"></i> <a href="https://github.com/CodeForAfrica/WAZImap.Kenya" target="_blank">Wazimap Kenya on Github</a>
         </li>
         <li>
-            <i class="fa fa-github"></i> Built on <a href="https://github.com/Code4SA/wazimap" target="_blank">WAZImap</a>
+            <i class="fa fa-github"></i> Built on <a href="https://github.com/Code4SA/wazimap" target="_blank">Wazimap</a>
         </li>
         <li>
             <i class="fa fa-twitter"></i> <a href="https://twitter.com/Code4Africa" target="_blank">@Code4Africa</a>
