--- a/wazimap_ke/templates/homepage.html
+++ b/wazimap_ke/templates/homepage.html
@@ -86,18 +86,18 @@
         <header class="column-full">
             <h1 class="article-header">About {{ WAZIMAP.name }}</h1>
 
-            <p>WAZImap is a tool aimed at helping journalists to add context and depth to stories. With newsroom budgets shrinking and journalists under increasing pressure to deliver stories most of the news on offer tends to be event based, personality-driven and ignores the bigger issues that concerns citizens. WAZImap will help journalists easily and quickly access reliable and factual information to back up and give context to their stories. WAZImap will help them focus on how to make better use of data and explore data journalism stories.</p>
+            <p>Wazimap is a tool aimed at helping journalists to add context and depth to stories. With newsroom budgets shrinking and journalists under increasing pressure to deliver stories most of the news on offer tends to be event based, personality-driven and ignores the bigger issues that concerns citizens. Wazimap will help journalists easily and quickly access reliable and factual information to back up and give context to their stories. WAZImap will help them focus on how to make better use of data and explore data journalism stories.</p>
 
-            <p>WAZImap takes data from the <a href="http://www.knbs.or.ke/" target="_blank">Kenya National Bureau of Statistics (KNBS)</a> and turns it into a mobile-friendly website with simple data visualisations of county/city/district level data on key demographic issues. These data visualisations are embeddable so that journalists can use them in their stories and you can access/download the data yourself too. WAZImap also allows you to compare any two areas side-by-side to see what the data reveals about those areas.</p>
+            <p>Wazimap takes data from the <a href="http://www.knbs.or.ke/" target="_blank">Kenya National Bureau of Statistics (KNBS)</a> and turns it into a mobile-friendly website with simple data visualisations of county/city/district level data on key demographic issues. These data visualisations are embeddable so that journalists can use them in their stories and you can access/download the data yourself too. Wazimap also allows you to compare any two areas side-by-side to see what the data reveals about those areas.</p>
 
-            <p>Journalists can also take advantage of WAZImap by using its built-in location detection to learn more about any area that they are reporting on.</p>
+            <p>Journalists can also take advantage of Wazimap by using its built-in location detection to learn more about any area that they are reporting on.</p>
 
-            <p class="explainer">WAZImap, derived from the Xhosa word <i>ulwazi</i> for knowledge, is a joint project by <a href="http://www.mediamonitoringafrica.org/" target="_blank">Media Monitoring Africa</a> and <a href="http://www.code4sa.org/" target="_blank">Code for South Africa</a> that provides easy access to <a href="http://www.statssa.gov.za/" target="_blank">South African census</a> and <a href="http://www.elections.org.za/" target="_blank">elections</a> data.</p>
+            <p class="explainer">Wazimap, derived from the Xhosa word <i>ulwazi</i> for knowledge, is a joint project by <a href="http://www.mediamonitoringafrica.org/" target="_blank">Media Monitoring Africa</a> and <a href="http://www.code4sa.org/" target="_blank">Code for South Africa</a> that provides easy access to <a href="http://www.statssa.gov.za/" target="_blank">South African census</a> and <a href="http://www.elections.org.za/" target="_blank">elections</a> data.</p>
 
             <!-- <p>Read more about <a href="/about">who we are and why we built WAZImap</a>. -->
 
             <h2 class="column-full subhead">Shoulders of Giants</h2>
-            <p>WAZImap is based on the amazing <a href="http://censusreporter.org/" target="_blank">Census Reporter</a> and is completely open source. You can <a href="https://wazimap.readthedocs.org/en/latest/index.html" target="_blank">build one for your country</a>.</p>
+            <p>Wazimap is based on the amazing <a href="http://censusreporter.org/" target="_blank">Census Reporter</a> and is completely open source. You can <a href="https://wazimap.readthedocs.org/en/latest/index.html" target="_blank">build one for your country</a>.</p>
 
             <hr/>
             <h2 style="text-align: center; margin-bottom: 20px;">Supported by:</h2>
