--- a/wazimap_ke/templates/homepage.html
+++ b/wazimap_ke/templates/homepage.html
@@ -99,14 +99,14 @@
             <h2 class="column-full subhead">Shoulders of Giants</h2>
             <p>Wazimap is based on the amazing <a href="http://censusreporter.org/" target="_blank">Census Reporter</a> and is completely open source. You can <a href="https://wazimap.readthedocs.org/en/latest/index.html" target="_blank">build one for your country</a>.</p>
 
-            <hr/>
+            <hr style="margin: 20px 0;"/>
             <h2 style="text-align: center; margin-bottom: 20px;">Supported by:</h2>
             <p style="text-align: center;">
-                <a href="https://codeforafrica.org/" target="_blank"><img src="{% static 'img/cfafrica-logo.png' %}" style="height: 70px; margin-bottom: 50px;"></a>
+                <a href="https://codeforafrica.org/" target="_blank"><img src="{% static 'img/cfafrica-logo.png' %}" style="height: 70px; margin-bottom: 20px;"></a>
                 <span style="width: 10px; height: 1px; display: inline-block;"> </span>
-                <a href="http://icfj.org/" target="_blank"><img src="{% static 'img/icfj-logo.png' %}" style="height: 70px; margin-bottom:50px;"></a>
+                <a href="http://icfj.org/" target="_blank"><img src="{% static 'img/icfj-logo.png' %}" style="height: 70px; margin-bottom:20px;"></a>
                 <span style="width: 10px; height: 1px; display: inline-block;"> </span>
-                <a href="http://www.mediamonitoringafrica.org/" target="_blank"><img src="{% static 'img/mma.png' %}" style="height: 50px; margin-bottom: 50px;"></a>
+                <a href="http://www.mediamonitoringafrica.org/" target="_blank"><img src="{% static 'img/mma.png' %}" style="height: 50px; margin-bottom: 20px;"></a>
             </p>
 
         </header>
