split up graph on treatments

--- a/wazimap_ke/templates/profile/profile_detail.html
+++ b/wazimap_ke/templates/profile/profile_detail.html
@@ -268,7 +268,9 @@
         </section>
 
         <section class="clearfix stat-row">
-             <div id="chart-grouped_column-type_treatment-treatment_distribution" data-stat-type="scaled-percentage" data-chart-title="Among children under age five who had symptoms of acute respiratory infection (ARI) or had fever and diarrhoea and how they were treated." ></div>
+             <!--<div class="column-third" id="chart-pie-type_treatment-ari_dist" data-stat-type="scaled-percentage" data-chart-title="Percentage of children with ARI who sought treatment from health facility or provider" ></div>
+             <div class="column-third" id="chart-pie-type_treatment-fever_dist" data-stat-type="scaled-percentage" data-chart-title="Percentage of children with fever who sought treatment from health facility or provider" ></div>-->
+             <div class="column-third" id="chart-grouped_column-type_treatment-treatment_distribution" data-stat-type="scaled-percentage" data-chart-title="Among children under age five who had symptoms of acute respiratory infection (ARI) or had fever and diarrhoea and how they were treated." ></div>
         </section>
 
     </div>
@@ -280,8 +282,8 @@
     </header>
     <div class="section-container">
         <section>
-            <p>Percentage of children under five years classified as malnourished according to three anthropometric indices of nutritional status: height-for-age, weight-for- height, and weight-for-age.</p>
-            <small>The indices are expressed in standard deviation units (SD) from the median of the WHO Child Growth Standards adopted in 2006.</small>
+            <small>Percentage of children under five years classified as malnourished according to three anthropometric indices of nutritional status: height-for-age, weight-for- height, and weight-for-age.
+            The indices are expressed in standard deviation units (SD) from the median of the WHO Child Growth Standards adopted in 2006.</small>
         </section>
         <section class="clearfix stat-row">
              <div class="column-third">
