--- a/wazimap_ke/templates/profile/profile_detail.html
+++ b/wazimap_ke/templates/profile/profile_detail.html
@@ -304,8 +304,8 @@
              </div>
         </section>
         <section class="clearfix stat-row">
-            <div class="column-half" id="chart-pie-nutrition-height_for_age_below_minus_three_dist" data-stat-type="percentage" data-chart-title="Below -3 SD" ></div>
-            <div class="column-half" id="chart-pie-nutrition-height_for_age_below_minus_two_dist" data-stat-type="percentage" data-chart-title="Below -2 SD" ></div>
+            <div class="column-half" id="chart-pie-nutrition-height_for_age_below_minus_three_dist" data-stat-type="percentage" data-chart-title="Below -3 standard deviation(SD) units " ></div>
+            <div class="column-half" id="chart-pie-nutrition-height_for_age_below_minus_two_dist" data-stat-type="percentage" data-chart-title="Below -2 standard deviation(SD) units " ></div>
         </section>
 
         <section class="clearfix stat-row">
@@ -314,9 +314,9 @@
              </div>
          </section>
         <section class="clearfix stat-row">
-            <div class="column-third" id="chart-pie-nutrition-weight_for_height_below_minus_three_dist" data-stat-type="percentage" data-chart-title="Below -3 SD" ></div>
-            <div class="column-third" id="chart-pie-nutrition-weight_for_height_below_minus_two_dist" data-stat-type="percentage" data-chart-title="Below -2 SD" ></div>
-            <div class="column-third" id="chart-pie-nutrition-weight_for_height_above_plus_two_dist" data-stat-type="percentage" data-chart-title="Above +2 SD" ></div>
+            <div class="column-third" id="chart-pie-nutrition-weight_for_height_below_minus_three_dist" data-stat-type="percentage" data-chart-title="Below -3 standard deviation(SD) units " ></div>
+            <div class="column-third" id="chart-pie-nutrition-weight_for_height_below_minus_two_dist" data-stat-type="percentage" data-chart-title="Below -2 standard deviation(SD) units " ></div>
+            <div class="column-third" id="chart-pie-nutrition-weight_for_height_above_plus_two_dist" data-stat-type="percentage" data-chart-title="Above +2 standard deviation(SD) units " ></div>
         </section>
 
         <section class="clearfix stat-row">
@@ -325,9 +325,9 @@
              </div>
         </section>
         <section class="clearfix stat-row">
-            <div class="column-third" id="chart-pie-nutrition-weight_for_age_below_minus_three_dist" data-stat-type="percentage" data-chart-title="Below -3 SD" ></div>
-            <div class="column-third" id="chart-pie-nutrition-weight_for_age_below_minus_two_dist" data-stat-type="percentage" data-chart-title="Below -2 SD" ></div>
-            <div class="column-third" id="chart-pie-nutrition-weight_for_age_above_plus_two_dist" data-stat-type="percentage" data-chart-title="Above +2 SD" ></div>
+            <div class="column-third" id="chart-pie-nutrition-weight_for_age_below_minus_three_dist" data-stat-type="percentage" data-chart-title="Below -3 standard deviation(SD) units " ></div>
+            <div class="column-third" id="chart-pie-nutrition-weight_for_age_below_minus_two_dist" data-stat-type="percentage" data-chart-title="Below -2 standard deviation(SD) units " ></div>
+            <div class="column-third" id="chart-pie-nutrition-weight_for_age_above_plus_two_dist" data-stat-type="percentage" data-chart-title="Above +2 standard deviation(SD) units " ></div>
         </section>
 
     </div>
